fix: the date in report, and added configuration for corss origin